--- a/shared/src/main/resources/languages/english.yml
+++ b/shared/src/main/resources/languages/english.yml
@@ -146,7 +146,7 @@ skinsMenu-Title: "&9Skins Menu - Page %page"
 
 skinsMenu-Select-Skin: "&2Click to select this skin"
 skinsMenu-PreviousPage: "&e&l«&7 Previous Page&e&l «"
-skinsMenu-Remove-Skin: "&c&l[ &7Clear Skin&c&l ]"
+skinsMenu-Clear-Skin: "&c&l[ &7Clear Skin&c&l ]"
 skinsMenu-NexstPage: "&a&l»&7 Next Page&a&l »"
 
 
