Revert "Update dependency org.bstats:bstats-bukkit to v3 (#821)"
This reverts commit 5b60a1cedbabd713e81f42deb0d3cc84c28efdf7.

--- a/shared/src/main/resources/languages/english.yml
+++ b/shared/src/main/resources/languages/english.yml
@@ -18,11 +18,11 @@ prefix: "&e[&2SkinsRestorer&e]"
 
 # Help lines appearing in "/skin" OR "/skin help"
 help-SkinClear: "Clears your skin."
-help-SkinClear-Other: "Clears the skin of a target player."
+help-SkinClear-Other: "Clears the skin of another player."
 help-SkinUpdate: "Updates your skin."
-help-SkinUpdate-Other: "Updates the skin of a target player."
+help-SkinUpdate-Other: "Updates the skin of another player."
 help-SkinSet: "Set the skin of another player."
-help-Skinset-Other: "Sets the skin for a target player"
+help-Skinset-Other: "Sets the skin of another player."
 help-SkinSet-Other-Url: "Set a skin by image_url.png link"
 
 # Admin help lines appearing in "/sr" OR "/sr help"
@@ -159,7 +159,7 @@ skinsMenu-NexstPage: "&a&l»&7 Next Page&a&l »"
 error-SkinUrl-Timeout: "&4MS Error&8: &cAPI timed out while uploading your &cskin. Please try again later. (MineSkin)"
 error-Generic-error: "&4Error&8: &cAn error occurred while requesting skin data, please try again later!"
 error-MOJANG-API-OFFLINE: "&4Error&8: &cMojang API is currently offline, sadly we were not able to find your archived skin. \n&cPlease try again later..."
-error-MS-API-OFFLINE: "&4Error&8: &cMineSkin API is currently offline, sadly we can't create custom skin's at this moment. \n&cPlease try again later..."
+error-MS-API-OFFLINE: "&4Error&8: &cMineSkin APII is currently offline, sadly we can't create custom skin's at this moment. \n&cPlease try again later..."
 error-SERVER-OFFLINE: "&4Error&8: &cServer is having connection issues, please try again later..."
 
 alt-API-FAILED: "&4Error&8: &cSkin Data API is overloaded, please try again later!"
